--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,41 @@
-﻿# === Node / Next.js / Env ===
-node_modules
-.next
-out
-dist
-.env
-.env.local
-.env.*.local
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.DS_Store
+.pnpm-debug.log*
 
-# === Editor ===
-.vscode
-.idea
+# env files (can opt-in for committing if needed)
+.env*
 
-# === Build artifacts ===
-*.log
-coverage
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
