--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "inthenameof",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "autoprefixer": "^10.4.21",
-    "next": "^15.5.6",
-    "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
-  },
-  "devDependencies": {
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "typescript": "^5.9.3"
-  }
+    "name":  "zenfit-site",
+    "version":  "0.1.0",
+    "private":  true,
+    "scripts":  {
+                    "dev":  "next dev --turbopack",
+                    "build":  "next build --turbopack",
+                    "start":  "next start",
+                    "lint":  "eslint"
+                },
+    "dependencies":  {
+                         "next":  "15.5.4",
+                         "react":  "19.1.0",
+                         "react-dom":  "19.1.0"
+                     },
+    "devDependencies":  {
+                            "@eslint/eslintrc":  "^3",
+                            "@tailwindcss/postcss":  "^4",
+                            "@types/node":  "^20",
+                            "@types/react":  "^19",
+                            "@types/react-dom":  "^19",
+                            "autoprefixer":  "^10.4.21",
+                            "eslint":  "^9",
+                            "eslint-config-next":  "15.5.4",
+                            "postcss":  "^8.5.6",
+                            "tailwindcss":  "^4.1.14",
+                            "typescript":  "^5"
+                        }
 }
